update api user,employee
